# azure-data-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data_factory/: pipeline_copy_to_adls.json
docs/: architecture.md  demo.md  troubleshooting.md  useful-commands.md
frontend/: index.html
functions/api/: __init__.py  function.json
functions/shared/: ingest.py
functions/transform/: __init__.py  function.json  requirements.txt
scripts/: run_local_pipeline.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_smoke.py
