[project]
name = "azure-data-pipeline"
version = "0.1.0"
description = "Multi-cloud data engineering pattern — Azure leg"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
functions = ["azure-functions", "pyodbc"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["shared", "functions", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
